--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <style>
   body {
     background:#0b0f14;
-    color:#ffd700;
+    color:#eaeaea;
     font-family:Arial, sans-serif;
     padding:20px;
   }
@@ -19,12 +19,22 @@
   }
   h1 {
     text-align:center;
-    margin-bottom:10px;
+    color:#ffd700;
+    margin-bottom:12px;
   }
   #chart {
     height:450px;
     background:#0b0f14;
     border-radius:8px;
+  }
+  .price-box {
+    background:#151a21;
+    padding:15px;
+    border-radius:8px;
+    margin-bottom:15px;
+  }
+  .row {
+    margin:4px 0;
   }
   .legend {
     display:flex;
@@ -37,18 +47,6 @@
     cursor:pointer;
     user-select:none;
   }
-  .legend input {
-    margin-right:6px;
-  }
-  .price-box {
-    background:#151a21;
-    padding:15px;
-    border-radius:8px;
-    margin-bottom:15px;
-  }
-  .row {
-    margin:4px 0;
-  }
 </style>
 </head>
 
@@ -59,8 +57,9 @@
 
 <div class="price-box">
   <div class="row">Unit (USD): <b><span id="unitUsd">…</span></b></div>
+  <div class="row">100 Units (USD): <span id="hundredUsd">…</span></div>
   <div class="row">Gold TWAP (USD/oz): <span id="goldPrice">…</span></div>
-  <div class="row">Gold grams per unit: <span id="goldGrams">…</span></div>
+  <div class="row">Gold grams per unit: <span>0.9823</span></div>
   <div class="row">Last update: <span id="timestamp">…</span></div>
 </div>
 
@@ -71,16 +70,30 @@
 
 <script>
 /* ================= CONFIG ================= */
-const FEED = "https://b-twap.onrender.com/latest.json";
+
+// 🔴 CHANGE NOTHING EXCEPT THIS IF SERVER MOVES
+const FEED_URL = "https://b-twap.onrender.com/latest.json";
 
 /* ================= CHART ================= */
-const chart = LightweightCharts.createChart(document.getElementById("chart"), {
-  layout: { background: { color:"#0b0f14" }, textColor:"#ffd700" },
-  grid: { vertLines:{color:"#333"}, horzLines:{color:"#333"} },
-  timeScale: { timeVisible:true, secondsVisible:true }
-});
+
+const chart = LightweightCharts.createChart(
+  document.getElementById("chart"),
+  {
+    layout: { background: { color:"#0b0f14" }, textColor:"#eaeaea" },
+    grid: {
+      vertLines:{ color:"#333" },
+      horzLines:{ color:"#333" }
+    },
+    timeScale: {
+      timeVisible:true,
+      secondsVisible:true
+    }
+  }
+);
 
 /* ================= SERIES ================= */
+
+// Gold (USD/oz) candlesticks
 const goldSeries = chart.addCandlestickSeries({
   upColor:"#ffd700",
   downColor:"#ff4b4b",
@@ -89,6 +102,7 @@ const goldSeries = chart.addCandlestickSeries({
   borderVisible:false
 });
 
+// FX USD contribution lines
 const fxColors = {
   BRL: "#009c3b",
   RUB: "#0039a6",
@@ -98,88 +112,89 @@ const fxColors = {
 };
 
 const fxSeries = {};
-Object.keys(fxColors).forEach(c => {
-  fxSeries[c] = chart.addLineSeries({
-    color: fxColors[c],
+Object.keys(fxColors).forEach(ccy => {
+  fxSeries[ccy] = chart.addLineSeries({
+    color: fxColors[ccy],
     lineWidth: 2,
     priceLineVisible: false
   });
 });
 
+// Total unit overlay
 const unitSeries = chart.addLineSeries({
-  color: "#cd7f32",
-  lineWidth: 3,
-  priceLineVisible: true
+  color:"#cd7f32",
+  lineWidth:3,
+  priceLineVisible:true
 });
 
 /* ================= LEGEND ================= */
+
 const legend = document.getElementById("legend");
 
-function addToggle(name, series, checked=true) {
-  const id = "toggle_" + name;
-  const label = document.createElement("label");
-  label.innerHTML =
-    `<input type="checkbox" id="${id}" ${checked?"checked":""}> ${name}`;
-  legend.appendChild(label);
-
-  document.getElementById(id).onchange = e => {
-    series.applyOptions({ visible: e.target.checked });
-  };
+function addToggle(label, series, checked=true) {
+  const id = "toggle_" + label;
+  const el = document.createElement("label");
+  el.innerHTML =
+    `<input type="checkbox" id="${id}" ${checked?"checked":""}> ${label}`;
+  legend.appendChild(el);
+  document.getElementById(id).onchange =
+    e => series.applyOptions({ visible:e.target.checked });
 }
 
-addToggle("Gold (USD)", goldSeries);
-Object.keys(fxSeries).forEach(c => addToggle(c, fxSeries[c]));
+addToggle("Gold (USD/oz)", goldSeries);
+Object.keys(fxSeries).forEach(ccy => addToggle(ccy, fxSeries[ccy]));
 addToggle("Total Unit", unitSeries);
 
-/* ================= STATE ================= */
-let goldCandle = null;
-let goldCandles = [];
+/* ================= DATA LOOP ================= */
 
-/* ================= TICK ================= */
+let goldCandle = null;
+let goldHistory = [];
+
 async function tick() {
   try {
-    const d = await (await fetch(FEED)).json();
+    const res = await fetch(FEED_URL);
+    const d = await res.json();
     const t = Math.floor(Date.now() / 1000);
 
-    /* ---- Header ---- */
+    // Header
     document.getElementById("unitUsd").textContent =
       d.unit_usd.toFixed(2);
+    document.getElementById("hundredUsd").textContent =
+      d.hundred_units_usd.toFixed(2);
     document.getElementById("goldPrice").textContent =
       d.gold.usd_per_oz_twap.toFixed(2);
-    document.getElementById("goldGrams").textContent =
-      d.gold.grams.toFixed(6);
     document.getElementById("timestamp").textContent =
       d.timestamp_utc.replace("T"," ").replace("Z"," UTC");
 
-    /* ---- Gold candlesticks ---- */
+    // Gold candles (USD/oz)
     const g = d.gold.usd_per_oz_twap;
     if (!goldCandle || goldCandle.time !== t) {
-      if (goldCandle) goldCandles.push(goldCandle);
+      if (goldCandle) goldHistory.push(goldCandle);
       goldCandle = { time:t, open:g, high:g, low:g, close:g };
-      goldSeries.setData(goldCandles.concat([goldCandle]));
+      goldSeries.setData(goldHistory.concat([goldCandle]));
     } else {
       goldCandle.high = Math.max(goldCandle.high, g);
-      goldCandle.low  = Math.min(goldCandle.low, g);
+      goldCandle.low = Math.min(goldCandle.low, g);
       goldCandle.close = g;
       goldSeries.update(goldCandle);
     }
 
-    /* ---- FX USD legs ---- */
-    Object.entries(d.fx).forEach(([ccy, leg]) => {
+    // FX USD contribution lines
+    Object.entries(d.fx).forEach(([ccy, obj]) => {
       fxSeries[ccy].update({
-        time: t,
-        value: leg.usd
+        time:t,
+        value:obj.usd
       });
     });
 
-    /* ---- Total unit overlay ---- */
+    // Total unit overlay
     unitSeries.update({
-      time: t,
-      value: d.unit_usd
+      time:t,
+      value:d.unit_usd
     });
 
-  } catch (e) {
-    console.error("tick error", e);
+  } catch (err) {
+    console.error("Feed error", err);
   }
 }
 
