--- a/public/index.html
+++ b/public/index.html
@@ -1,62 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>BRICS Unit — Reference Basket</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<meta charset="UTF-8">
+<title>BRICS Unit Basket v2 — Candles & FX</title>
 <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
-
 <style>
-  body {
-    margin: 0;
-    background: #0e1117;
-    color: #e6e6e6;
-    font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-  }
-
-  header {
-    padding: 16px 20px;
-    border-bottom: 1px solid #1f2937;
-  }
-
-  h1 {
-    margin: 0;
-    font-size: 20px;
-    font-weight: 600;
-  }
-
-  #unitValue {
-    margin-top: 6px;
-    font-size: 26px;
-    font-weight: 700;
-    color: #CD7F32;
-  }
-
-  #controls {
-    padding: 12px 20px;
-    border-bottom: 1px solid #1f2937;
-    display: flex;
-    gap: 16px;
-    flex-wrap: wrap;
-  }
-
-  label {
-    font-size: 14px;
-    cursor: pointer;
-    user-select: none;
-  }
-
-  input[type="checkbox"] {
-    margin-right: 6px;
-  }
-
-  #chart {
-    height: 520px;
-  }
+  body{margin:0;font-family:system-ui;background:#0e1117;color:#e6e6e6}
+  header{padding:16px 20px;border-bottom:1px solid #1f2937}
+  h1{margin:0;font-size:20px;font-weight:600}
+  #unitValue{margin-top:6px;font-size:26px;font-weight:700;color:#CD7F32}
+  #controls{padding:12px 20px;border-bottom:1px solid #1f2937;display:flex;gap:16px;flex-wrap:wrap}
+  label{font-size:14px;cursor:pointer;user-select:none}
+  input[type="checkbox"]{margin-right:6px}
+  #chart{height:520px}
 </style>
 </head>
-
 <body>
 
 <header>
@@ -77,126 +35,73 @@
 <div id="chart"></div>
 
 <script>
-/* ================= COLORS (LOCKED) ================= */
 const COLORS = {
-  gold: "#FFD700",
-  BRL: "#1E8F4E",
-  RUB: "#B22222",
-  INR: "#FF9933",
-  CNY: "#D32F2F",
-  ZAR: "#1976D2",
-  unit: "#CD7F32"
+  gold:"#FFD700",
+  BRL:"#1E8F4E",
+  RUB:"#B22222",
+  INR:"#FF9933",
+  CNY:"#D32F2F",
+  ZAR:"#1976D2",
+  unit:"#CD7F32"
 };
 
-/* ================= CHART ================= */
-const chart = LightweightCharts.createChart(document.getElementById("chart"), {
-  layout: {
-    background: { color: "#0e1117" },
-    textColor: "#d1d5db"
-  },
-  grid: {
-    vertLines: { color: "#1f2937" },
-    horzLines: { color: "#1f2937" }
-  },
-  timeScale: { timeVisible: true, secondsVisible: true }
+const FX_LIST=["BRL","RUB","INR","CNY","ZAR"];
+const chart = LightweightCharts.createChart(document.getElementById("chart"),{
+  layout:{background:{color:"#0e1117"},textColor:"#d1d5db"},
+  grid:{vertLines:{color:"#1f2937"},horzLines:{color:"#1f2937"}},
+  timeScale:{timeVisible:true,secondsVisible:true}
 });
 
-/* ================= SERIES ================= */
 const series = {
-  gold: chart.addCandlestickSeries({
-    upColor: COLORS.gold,
-    downColor: COLORS.gold,
-    borderVisible: false,
-    wickUpColor: COLORS.gold,
-    wickDownColor: COLORS.gold
-  }),
-  BRL: chart.addCandlestickSeries({ upColor: COLORS.BRL, downColor: COLORS.BRL, borderVisible: false }),
-  RUB: chart.addCandlestickSeries({ upColor: COLORS.RUB, downColor: COLORS.RUB, borderVisible: false }),
-  INR: chart.addCandlestickSeries({ upColor: COLORS.INR, downColor: COLORS.INR, borderVisible: false }),
-  CNY: chart.addCandlestickSeries({ upColor: COLORS.CNY, downColor: COLORS.CNY, borderVisible: false }),
-  ZAR: chart.addCandlestickSeries({ upColor: COLORS.ZAR, downColor: COLORS.ZAR, borderVisible: false }),
-  unit: chart.addCandlestickSeries({
-    upColor: COLORS.unit,
-    downColor: COLORS.unit,
-    borderVisible: false
-  })
+  gold:chart.addCandlestickSeries({upColor:COLORS.gold,downColor:COLORS.gold,wickUpColor:COLORS.gold,wickDownColor:COLORS.gold,borderVisible:false}),
+  BRL:chart.addCandlestickSeries({upColor:COLORS.BRL,downColor:COLORS.BRL,borderVisible:false}),
+  RUB:chart.addCandlestickSeries({upColor:COLORS.RUB,downColor:COLORS.RUB,borderVisible:false}),
+  INR:chart.addCandlestickSeries({upColor:COLORS.INR,downColor:COLORS.INR,borderVisible:false}),
+  CNY:chart.addCandlestickSeries({upColor:COLORS.CNY,downColor:COLORS.CNY,borderVisible:false}),
+  ZAR:chart.addCandlestickSeries({upColor:COLORS.ZAR,downColor:COLORS.ZAR,borderVisible:false}),
+  unit:chart.addCandlestickSeries({upColor:COLORS.unit,downColor:COLORS.unit,borderVisible:false})
 };
 
-/* ================= STATE ================= */
-const history = {};
-Object.keys(series).forEach(k => history[k] = []);
+const history={}; Object.keys(series).forEach(k=>history[k]=[]);
 
-/* ================= FETCH ================= */
-async function poll() {
-  const r = await fetch("https://brics-unit.onrender.com/latest.json");
-  const d = await r.json();
+async function poll(){
+  const d=await(await fetch("/latest.json")).json();
+  const t=Math.floor(Date.now()/1000);
 
-  const t = Math.floor(Date.now() / 1000);
+  document.getElementById("unitValue").textContent=`$${d.unit_usd.toFixed(4)} USD`;
 
-  document.getElementById("unitValue").textContent =
-    `$${d.unit_usd.toFixed(4)} USD`;
-
-  push("gold", d.gold.usd_value);
-  push("BRL", d.fx.BRL.usd);
-  push("RUB", d.fx.RUB.usd);
-  push("INR", d.fx.INR.usd);
-  push("CNY", d.fx.CNY.usd);
-  push("ZAR", d.fx.ZAR.usd);
-  push("unit", d.unit_usd);
-
-  function push(k, v) {
-    const h = history[k];
-    const prev = h[h.length - 1];
-    const candle = {
-      time: t,
-      open: prev ? prev.close : v,
-      high: Math.max(v, prev ? prev.close : v),
-      low: Math.min(v, prev ? prev.close : v),
-      close: v
-    };
+  function push(k,v){
+    const h=history[k];
+    const prev=h[h.length-1];
+    const candle={time:t,open:prev?prev.close:v,high:prev?Math.max(v,prev.close):v,low:prev?Math.min(v,prev.close):v,close:v};
     h.push(candle);
     series[k].setData(h);
   }
+
+  push("gold",d.gold.usd_value);
+  FX_LIST.forEach(c=>push(c,d.fx[c].usd));
+  push("unit",d.unit_usd);
 }
 
-setInterval(poll, 5000);
+setInterval(poll,5000);
 poll();
 
-/* ================= TOGGLES ================= */
-document.querySelectorAll("#controls input").forEach(cb => {
-  cb.addEventListener("change", updateVisibility);
-});
+document.querySelectorAll("#controls input").forEach(cb=>cb.addEventListener("change",updateVisibility));
 
-function updateVisibility() {
-  const unitOn = document.getElementById("toggleUnit").checked;
-
-  Object.keys(series).forEach(k => {
-    let visible = true;
-    let opacity = 1;
-
-    if (unitOn) {
-      if (k === "unit") {
-        visible = true;
-        opacity = 1;
-      } else {
-        visible = true;
-        opacity = 0.25;
-      }
-    } else {
-      const cb = document.querySelector(`input[data-series="${k}"]`);
-      visible = cb ? cb.checked : false;
-      opacity = 1;
+function updateVisibility(){
+  const unitOn=document.getElementById("toggleUnit").checked;
+  Object.keys(series).forEach(k=>{
+    let visible=true,opacity=1;
+    if(unitOn){
+      if(k==="unit"){visible=true;opacity=1}else{visible=true;opacity=0.25}
+    }else{
+      const cb=document.querySelector(`input[data-series="${k}"]`);
+      visible=cb?cb.checked:false;
+      opacity=1;
     }
-
-    series[k].applyOptions({
-      visible,
-      priceLineVisible: false,
-      lastValueVisible: false,
-      opacity
-    });
+    series[k].applyOptions({visible,opacity,priceLineVisible:false,lastValueVisible:false});
   });
 }
 </script>
-
 </body>
 </html>
